[project]
name = "aseprite-sheet-combiner"
version = "0.1.0"
description = "A utility for combining exported Aseprite .pngs and .json files into one big sheet and separate metadata files"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typer>=0.12.0",
]

[project.scripts]
aseprite-sheet-combiner = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]